Fixing scrollbar issue

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body .container {
   height: 100%;
   width: 100%;
   z-index: 1;
+  overflow: hidden;
 }
 body .container #game {
   width: 1280px;
